API-JDK/k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: fpfl-api
    namespace: fpfl
    labels:
        app: fpfl-api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: fpfl-api
    template:
        metadata:
            labels:
                app: fpfl-api
        spec:
            containers:
                - name: fpfl-api
                  image: fpflregistry.azurecr.io/fpflapijdk:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
