API-JDK/k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
    name: fpfl-api-service
    namespace: fpfl
    labels:
        app: fpfl-api
spec:
    type: ClusterIP
    selector:
        app: fpfl-api
    ports:
        - port: 8080
          targetPort: 8080
