API-JDK/k8s/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: fpfl-api-ingress
    namespace: fpfl
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    ingressClassName: nginx
    rules:
        - host: api.ledger-finance.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: fpfl-api-service
                            port:
                                number: 8080
